* BUGFIX: The De-Pivot operator now has much better error handling when trying to setup the index attribute as an already existing attribute
* BUGFIX: Bug: Read Excel cannot open the Import Configuration Wizard, if the excel_file parameter is not set
* BUGFIX: Nominal to Binominal can handle border cases with mapping containing less than 2 values


Changes from RapidMiner 5.2.6 to 5.2.8
--------------------------------------
* Send Mail operator has a new behavior: Stop process and show error if mail cannot be send
* Send Mail operator has a new parameter: 'Ignore errors'
* Write CSV operator has a new parameter: 'Append to file'
* Write Excel operator has a new parameter: File Format (xls, xlsx)
* New Operator: Reorder Attributes
* Set Macro: now can define empty macros
* BUGFIX: Fix a "This should not happen" message in the Advanced Charts.
* BUGFIX: Keep old settings after updating RapidMiner
* BUGFIX: 'Cancel' ParameterTypeList Dialog works correctly now
* BUGFIX: FP-Growth correctly handles parameter 'must contain'
* BUGFIX: Join Operator displays MetaData correctly

Changes from RapidMiner 5.2.3 to 5.2.6
--------------------------------------
* Read SAS operator
* Added timezone parameter to Date to Nominal operator
* Excel 2007 support
* Dialog for editing cron expressions
* Dialog to see preview for regular expressions
* Update Database operator
* Easier mechanism for Extensions to create configurable items
* Japanese and German translation

Changes from RapidMiner 5.2.1 to 5.2.2
--------------------------------------
* Remove Correlated Attributes uses deterministic random numbers
* Improved Repository Tree handling (save expansion state on refresh and improved tree selection on entry removal)
* Improved exporting of Advanced Charts View

Changes from RapidMiner 5.2.0 to 5.2.1
--------------------------------------
* Added operators to manage repository entries: Copy, Move, Delete, Rename

Changes from RapidMiner 5.1 to 5.2