@@ -103,6 +103,7 @@ process.error.weka_ensemble_error    = Inner operators of WekaEnsembleLearner mu
 process.error.weka_metalearner_error = Inner operators of WekaMetaLearner must be Weka learners.
 
 process.error.capturing_group_undefined = The parameter {0} specifies a capturing group that was not defined in the regular expression in {1}.
+process.error.invalid_regex				= The given regular expression ''{0}'' is invalid.
 process.error.undefined_parameter         = The mandatory parameter "{0}" is undefined.
 process.error.deprecation                 = {0} is deprecated: {1}.
 process.error.wrong_parameter_settings = The current parameter settings are not allowed.
